--- a/nokosocial-media/index.html
+++ b/nokosocial-media/index.html
@@ -17,7 +17,6 @@
         <div class="search-bar">
           <i class="ri-search-line"></i>
           <input
-            id="create-post"
             type="search"
             placeholder="Search for creators, inspirations, and project"
           />
@@ -235,13 +234,307 @@
               <img src="./assets/images/profile-1.jpg" alt="feed" />
             </div>
             <input
-              type="search"
+              type="text"
               placeholder="What's on your mind, Diana?"
               id="create-post"
             />
 
             <input type="submit" value="submit" class="btn btn-primary" />
           </form>
+
+          <!-- Feeds -->
+          <div class="feeds">
+            <!-- Feed 1 -->
+            <div class="feed">
+              <div class="head">
+                <div class="user">
+                  <div class="profile-picture">
+                    <img src="./assets/images/profile-13.jpg" alt="user" />
+                  </div>
+
+                  <div class="info">
+                    <h3>Lana Rose</h3>
+                    <small>Dubai, 15 MINUTES AGO</small>
+                  </div>
+                </div>
+
+                <span class="edit">
+                  <i class="ri-more-fill"></i>
+                </span>
+              </div>
+
+              <div class="photo">
+                <img src="./assets/images/feed-1.jpg" alt="feed" />
+              </div>
+
+              <div class="action-buttons">
+                <div class="interaction-buttons">
+                  <span><i class="ri-heart-3-line"></i></span>
+                  <span><i class="ri-chat-1-line"></i></span>
+                  <span><i class="ri-share-line"></i></span>
+                </div>
+
+                <div class="bookmark">
+                  <span><i class="ri-bookmark-line"></i></span>
+                </div>
+              </div>
+
+              <div class="liked-by">
+                <span
+                  ><img src="./assets/images/profile-10.jpg" alt="user"
+                /></span>
+                <span
+                  ><img src="./assets/images/profile-4.jpg" alt="user"
+                /></span>
+                <span
+                  ><img src="./assets/images/profile-15.jpg" alt="user"
+                /></span>
+
+                <p>Liked by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
+              </div>
+
+              <div class="caption">
+                <p>
+                  <b>Lana Rose</b> Lorem ipsum dolor sit amet.
+                  <span class="hash-tag">#lifestyle</span>
+                </p>
+              </div>
+
+              <div class="comments text-muted">View all 277 comments</div>
+            </div>
+
+            <!-- Feed 2 -->
+            <div class="feed">
+              <div class="head">
+                <div class="user">
+                  <div class="profile-picture">
+                    <img src="./assets/images/profile-14.jpg" alt="user" />
+                  </div>
+
+                  <div class="info">
+                    <h3>Lana Rose</h3>
+                    <small>Dubai, 15 MINUTES AGO</small>
+                  </div>
+                </div>
+                <span class="edit">
+                  <i class="ri-more-fill"></i>
+                </span>
+              </div>
+
+              <div class="photo">
+                <img src="./assets/images/feed-2.jpg" alt="feed" />
+              </div>
+
+              <div class="action-buttons">
+                <div class="interaction-buttons">
+                  <span><i class="ri-heart-3-line"></i></span>
+                  <span><i class="ri-chat-1-line"></i></span>
+                  <span><i class="ri-share-line"></i></span>
+                </div>
+
+                <div class="bookmark">
+                  <span><i class="ri-bookmark-line"></i></span>
+                </div>
+              </div>
+
+              <div class="liked-by">
+                <span
+                  ><img src="./assets/images/profile-10.jpg" alt="user"
+                /></span>
+                <span
+                  ><img src="./assets/images/profile-4.jpg" alt="user"
+                /></span>
+                <span
+                  ><img src="./assets/images/profile-15.jpg" alt="user"
+                /></span>
+
+                <p>Liked by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
+              </div>
+
+              <div class="caption">
+                <p>
+                  <b>Lana Rose</b> Lorem ipsum dolor sit amet.
+                  <span class="hash-tag">#lifestyle</span>
+                </p>
+              </div>
+
+              <div class="comments text-muted">View all 277 comments</div>
+            </div>
+
+            <!-- Feed 3 -->
+            <div class="feed">
+              <div class="head">
+                <div class="user">
+                  <div class="profile-picture">
+                    <img src="./assets/images/profile-15.jpg" alt="user" />
+                  </div>
+
+                  <div class="info">
+                    <h3>Lana Rose</h3>
+                    <small>Dubai, 15 MINUTES AGO</small>
+                  </div>
+                </div>
+                <span class="edit">
+                  <i class="ri-more-fill"></i>
+                </span>
+              </div>
+
+              <div class="photo">
+                <img src="./assets/images/feed-3.jpg" alt="feed" />
+              </div>
+
+              <div class="action-buttons">
+                <div class="interaction-buttons">
+                  <span><i class="ri-heart-3-line"></i></span>
+                  <span><i class="ri-chat-1-line"></i></span>
+                  <span><i class="ri-share-line"></i></span>
+                </div>
+
+                <div class="bookmark">
+                  <span><i class="ri-bookmark-line"></i></span>
+                </div>
+              </div>
+
+              <div class="liked-by">
+                <span
+                  ><img src="./assets/images/profile-10.jpg" alt="user"
+                /></span>
+                <span
+                  ><img src="./assets/images/profile-4.jpg" alt="user"
+                /></span>
+                <span
+                  ><img src="./assets/images/profile-15.jpg" alt="user"
+                /></span>
+
+                <p>Liked by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
+              </div>
+
+              <div class="caption">
+                <p>
+                  <b>Lana Rose</b> Lorem ipsum dolor sit amet.
+                  <span class="hash-tag">#lifestyle</span>
+                </p>
+              </div>
+
+              <div class="comments text-muted">View all 277 comments</div>
+            </div>
+
+            <!-- Feed 4 -->
+            <div class="feed">
+              <div class="head">
+                <div class="user">
+                  <div class="profile-picture">
+                    <img src="./assets/images/profile-16.jpg" alt="user" />
+                  </div>
+
+                  <div class="info">
+                    <h3>Lana Rose</h3>
+                    <small>Dubai, 15 MINUTES AGO</small>
+                  </div>
+                </div>
+                <span class="edit">
+                  <i class="ri-more-fill"></i>
+                </span>
+              </div>
+
+              <div class="photo">
+                <img src="./assets/images/feed-4.jpg" alt="feed" />
+              </div>
+
+              <div class="action-buttons">
+                <div class="interaction-buttons">
+                  <span><i class="ri-heart-3-line"></i></span>
+                  <span><i class="ri-chat-1-line"></i></span>
+                  <span><i class="ri-share-line"></i></span>
+                </div>
+
+                <div class="bookmark">
+                  <span><i class="ri-bookmark-line"></i></span>
+                </div>
+              </div>
+
+              <div class="liked-by">
+                <span
+                  ><img src="./assets/images/profile-10.jpg" alt="user"
+                /></span>
+                <span
+                  ><img src="./assets/images/profile-4.jpg" alt="user"
+                /></span>
+                <span
+                  ><img src="./assets/images/profile-15.jpg" alt="user"
+                /></span>
+
+                <p>Liked by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
+              </div>
+
+              <div class="caption">
+                <p>
+                  <b>Lana Rose</b> Lorem ipsum dolor sit amet.
+                  <span class="hash-tag">#lifestyle</span>
+                </p>
+              </div>
+
+              <div class="comments text-muted">View all 277 comments</div>
+            </div>
+
+            <!-- Feed 5 -->
+            <div class="feed">
+              <div class="head">
+                <div class="user">
+                  <div class="profile-picture">
+                    <img src="./assets/images/profile-17.jpg" alt="user" />
+                  </div>
+
+                  <div class="info">
+                    <h3>Lana Rose</h3>
+                    <small>Dubai, 15 MINUTES AGO</small>
+                  </div>
+                </div>
+                <span class="edit">
+                  <i class="ri-more-fill"></i>
+                </span>
+              </div>
+
+              <div class="photo">
+                <img src="./assets/images/feed-5.jpg" alt="feed" />
+              </div>
+
+              <div class="action-buttons">
+                <div class="interaction-buttons">
+                  <span><i class="ri-heart-3-line"></i></span>
+                  <span><i class="ri-chat-1-line"></i></span>
+                  <span><i class="ri-share-line"></i></span>
+                </div>
+
+                <div class="bookmark">
+                  <span><i class="ri-bookmark-line"></i></span>
+                </div>
+              </div>
+
+              <div class="liked-by">
+                <span
+                  ><img src="./assets/images/profile-10.jpg" alt="user"
+                /></span>
+                <span
+                  ><img src="./assets/images/profile-4.jpg" alt="user"
+                /></span>
+                <span
+                  ><img src="./assets/images/profile-15.jpg" alt="user"
+                /></span>
+
+                <p>Liked by <b>Ernest Achiever</b> and <b>2,323 others</b></p>
+              </div>
+
+              <div class="caption">
+                <p>
+                  <b>Lana Rose</b> Lorem ipsum dolor sit amet.
+                  <span class="hash-tag">#lifestyle</span>
+                </p>
+              </div>
+
+              <div class="comments text-muted">View all 277 comments</div>
+            </div>
+          </div>
         </div>
 
         <!-- right -->
