--- a/nokosocial-media/index.html
+++ b/nokosocial-media/index.html
@@ -538,9 +538,219 @@
         </div>
 
         <!-- right -->
-        <div class="right"></div>
+        <div class="right">
+          <div class="messages">
+            <div class="heading">
+              <h4>Messages</h4>
+              <i class="ri-file-edit-line"></i>
+            </div>
+
+            <!-- search bar -->
+            <div class="search-bar">
+              <i class="ri-search-line"></i>
+              <input
+                type="search"
+                placeholder="Search Message"
+                id="message-search"
+              />
+            </div>
+
+            <!-- message category -->
+            <div class="category">
+              <h6 class="active">Primary</h6>
+              <h6>General</h6>
+              <h6 class="message-requests">Requests(5)</h6>
+            </div>
+
+            <!-- Message -->
+            <div class="message">
+              <div class="profile-picture">
+                <img src="./assets/images/profile-17.jpg" alt="user" />
+              </div>
+
+              <div class="message-body">
+                <h5>Edem Quist</h5>
+                <p class="text-muted">Just woke up bruh</p>
+              </div>
+            </div>
+
+            <!-- Message -->
+            <div class="message">
+              <div class="profile-picture">
+                <img src="./assets/images/profile-3.jpg" alt="user" />
+                <div class="active"></div>
+              </div>
+
+              <div class="message-body">
+                <h5>Franca Diela</h5>
+                <p class="text-muted">Recieved bruh. Thanks!</p>
+              </div>
+            </div>
+
+            <!-- Message -->
+            <div class="message">
+              <div class="profile-picture">
+                <img src="./assets/images/profile-6.jpg" alt="user" />
+              </div>
+
+              <div class="message-body">
+                <h5>Juliet Makarey</h5>
+                <p class="text-muted">lol u right</p>
+              </div>
+            </div>
+
+            <!-- Message -->
+            <div class="message">
+              <div class="profile-picture">
+                <img src="./assets/images/profile-4.jpg" alt="user" />
+              </div>
+
+              <div class="message-body">
+                <h5>Jane Doe</h5>
+                <p class="text-bold">ok</p>
+              </div>
+            </div>
+
+            <!-- Message -->
+            <div class="message">
+              <div class="profile-picture">
+                <img src="./assets/images/profile-5.jpg" alt="user" />
+              </div>
+
+              <div class="message-body">
+                <h5>Daniella Jackson</h5>
+                <p class="text-bold">2 new messages</p>
+              </div>
+            </div>
+
+            <!-- Message -->
+            <div class="message">
+              <div class="profile-picture">
+                <img src="./assets/images/profile-7.jpg" alt="user" />
+                <div class="active"></div>
+              </div>
+
+              <div class="message-body">
+                <h5>Chantel Msiza</h5>
+                <p class="text-muted">Birthday tomorrow!</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Friend request -->
+          <div class="friend-request">
+            <h4>Requests</h4>
+            <div class="request">
+              <div class="info">
+                <div class="profile-picture">
+                  <img src="./assets/images/profile-18.jpg" alt="user" />
+                </div>
+
+                <div>
+                  <h5>Hajia Bintu</h5>
+                  <p class="text-muted">8 mutual friends</p>
+                </div>
+              </div>
+              <div class="action">
+                <button class="btn btn-primary">Accept</button>
+                <button class="btn">Decline</button>
+              </div>
+            </div>
+
+            <div class="request">
+              <div class="info">
+                <div class="profile-picture">
+                  <img src="./assets/images/profile-17.jpg" alt="user" />
+                </div>
+
+                <div>
+                  <h5>Hajia Bintu</h5>
+                  <p class="text-muted">8 mutual friends</p>
+                </div>
+              </div>
+              <div class="action">
+                <button class="btn btn-primary">Accept</button>
+                <button class="btn">Decline</button>
+              </div>
+            </div>
+
+            <div class="request">
+              <div class="info">
+                <div class="profile-picture">
+                  <img src="./assets/images/profile-10.jpg" alt="user" />
+                </div>
+
+                <div>
+                  <h5>Hajia Bintu</h5>
+                  <p class="text-muted">8 mutual friends</p>
+                </div>
+              </div>
+              <div class="action">
+                <button class="btn btn-primary">Accept</button>
+                <button class="btn">Decline</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- End of Right Section -->
       </div>
     </main>
+
+    <!-- Theme Customization -->
+    <div class="customize-theme">
+      <div class="card">
+        <h2>Customize your view</h2>
+        <p class="text-muted">Manage your font size, color, and background.</p>
+
+        <!-- Font Sizes -->
+        <div class="font-size">
+          <h4>Font Size</h4>
+          <div>
+            <h6>Aa</h6>
+            <div class="choose-size">
+              <span class="font-size-1"></span>
+              <span class="font-size-2 active"></span>
+              <span class="font-size-3"></span>
+              <span class="font-size-4"></span>
+              <span class="font-size-5"></span>
+            </div>
+            <h3>Aa</h3>
+          </div>
+        </div>
+
+        <!-- Primary Colors -->
+        <div class="color">
+          <h4>Color</h4>
+          <div class="choose-color">
+            <span class="color-1 active"></span>
+            <span class="color-2"></span>
+            <span class="color-3"></span>
+            <span class="color-4"></span>
+            <span class="color-5"></span>
+          </div>
+        </div>
+
+        <!-- Background Color -->
+        <div class="background">
+          <h4>Background</h4>
+          <div class="choose-bg">
+            <div class="bg-1 active">
+              <span></span>
+              <h5 for="bg-1">Light</h5>
+            </div>
+            <div class="bg-2">
+              <span></span>
+              <h5>Dim</h5>
+            </div>
+            <div class="bg-3">
+              <span></span>
+              <h5 for="bg-3">Lights Out</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="./script.js"></script>
   </body>
